# tachyon

./: .gitignore  404.html  Cargo.toml  README.md  l.html  l.json  Выпускная квалификационная работа.docx  САМЫЙ ВАЖНЫЙ ДОКУМЕНТ, ШАБЛОН ВКР.dotx
.github/workflows/: rust.yml
data/: abandoned.json
docs/: WIP VKR.docx  ~$МЫЙ ВАЖНЫЙ ДОКУМЕНТ, ШАБЛОН ВКР.dotx  ~$Р для выгрузки в ЭОС.docx  ~$дание_ПРЕДДИПЛОМНАЯ_ПРАКТИКА_МАХМУДОВ 16-07.docx  Аннотация.docx  ВКР Махмудов (на исправление).docx  ВКР Махмудов Финальная.docx  ВКР для выгрузки в ЭОС.docx  Выпускная квалификационная работа.docx  Доп материалы.pptx  Задание на ВКР. Махмудов Б.Н. ИДБ-16-07.docx  Задание_ПРЕДДИПЛОМНАЯ_ПРАКТИКА_МАХМУДОВ 16-07.docx  ОТЧЕТ_ПРЕДДИПЛОМНАЯ_ПРАКТИКА_МАХМУДОВ 16-07.docx  ПЛАН_ПРЕДДИПЛОМНАЯ_ПРАКТИКА_МАХМУДОВ 16-07.docx  План-проспект.docx  Презентация ВКР.pptx  РЕЧЬ.docx  САМЫЙ ВАЖНЫЙ ДОКУМЕНТ, ШАБЛОН ВКР.dotx
docs/models/: Tachyon.rsf  ramus.rsf  (+1 more)
gui/: index.html  loaderio-955c801b3e60fe70ed87da6f516d2d03.txt  package-lock.json
gui/controllers/: apidoc.js  (+9 more)
html/: editor.html  editor.htmlbkp  index.html  main.js
src/: Hello.html  Hello.txt  engine.rs  error.rs  file.rs  lib.rs  main.rs  mime.rs  request.rs  response.rs  router.rs  utils.rs
stress_test/: newfile.html  test.html  throughput.php  throughput.py  throughput.sh
tachyon-vue/: index.html  main.js
templates/: editor.html  form.html  json.html  link.html  package-lock.json
templates-db/: abandoned.html  bigtable.html  bobo1.html  bobo3.html  form.html  index.json  lenkom.html  link.html  loops.html  simplepage.html
(+18 files in other folders)
