[package]
name = "tachyon"
version = "0.1.0"
authors = ["Bobur <bobs4462@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.13"
tokio = "0.2"
futures = "0.3"
lazy_static = "1.4"
log = "0.4"
pretty_env_logger = "0.3"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tera = "1.0"

[dependencies.uuid]
features = ["serde", "v4"]
version = "0.8"
