[package]
name = "tachyon"
version = "0.1.0"
authors = ["Bobur <bobs4462@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
tokio = { version = "0.2.8", features = ["full"] }
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tera = "1.0"
httparse = "1.3"
async-std = "1.4"

